# mopidy-tidal-goodies

./: .gitignore  README.md  pyproject.toml
mopidy_tidal_goodies/: __init__.py  audio.py  ext.conf  handlers.py  stats.py  tidal.py
packaging/aur/mopidy-tidal-goodies-git/: PKGBUILD
tests/: test_audio.py  test_smoke.py
